--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-swipeable-views": "0.13.1",
-    "@material-ui/core/styles": "3.9.3"
+    "@material-ui/core": "3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
