--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Lindungi Hutan",
   "icons": [
     {
-      "src": "./logo.png",
+      "src": "./image/logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     },
     {
-      "src": "./logo.png",
+      "src": "./image/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./logo.png",
+      "src": "./image/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
