--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-swipeable": "5.1.0",
     "react-swipeable-views": "0.13.1",
     "react-swipeable-views-utils": "0.13.1",
+    "redux": "^4.0.1",
     "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
